--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
  <head>
-  <title>第三次就上手</
+  <title>第三次就上手</title>
+   <link rel="icon" href="https://glitch.com/favicon.ico" />
    </head>
 <body>
 
